--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,18 @@ six==1.16.0
 threadpoolctl==3.5.0
 tzdata==2024.2
 Werkzeug==3.0.4
+Brotli==1.1.0
+cffi==1.17.1
+chardet==5.2.0
+cssselect2==0.7.0
+fonttools==4.55.0
+Pillow==10.0.0
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.15.0
+reportlab==4.2.5
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+weasyprint==63.0
+webencodings==0.5.1
+zopfli==0.2.3.post1
